# Kitten-Bot

./: .gitignore  .replit  README.rst  main.py  pyproject.toml  react.py  streamalert.py  variable.py  videos.json
Kittenbot/: BotEvents.py  Cogs.py  Commands.py  Event.py  Logger.py  Main.py  Moderation.py  Pinbot.py  Storage.py  Tasks.py  Utils.py
Scripts/: Setup.bat  Start.bat
Settings/: default.json
