[tool.poetry]
name = "KittenBot"
version = "1.3.0"
description = ""
authors = ["GalacticKittenSS <@GalacticKitten>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
Flask = "^2.2.0"
google-api-python-client = "^2.62.0"
"discord.py" = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
